# discord

./: .gitignore  Cargo.toml  pyproject.toml
llm/: main.py  set_logging.py
llm/core/: config.py
src/: config.rs  database.rs  handler.rs  main.rs
src/commands/: llm.rs  mod.rs  ping.rs
