[package]
name = "discord"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
config = "0.15.15"
dotenvy = "0.15.7"
once_cell = "1.21.3"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serenity = { version = "0.12.4", features = ["full"] }
songbird = { version = "0.5.0", features = ["builtin-queue"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = { version = "2.5.7" }
uuid = { version = "1.18.1", features = ["v4"] }